--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+:root {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -24,10 +28,9 @@ nav {
 }
 
 #content {
-    background: center / cover no-repeat url("./hero.jpg");
+    background: center / cover no-repeat url("./img/bg.jpg");
     aspect-ratio: 3 / 2;
 }
-
 
 .hero {
     display: grid;
@@ -35,7 +38,6 @@ nav {
     min-height: 100%;
 
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     & .heading {
         font-size: 4rem;
@@ -64,7 +66,7 @@ nav {
     display: grid;
     justify-items: center;
 
-    background-color: rgba(255, 255, 255, 0.516);
+    background-color: rgba(255, 255, 255, 0.800);
 }
 
 .menu-heading {
@@ -104,18 +106,32 @@ nav {
     }
 }
 
-.salads {
-    background: center / cover no-repeat url("./img/salad.jpg");
+.menu-item {
+    &.salads {
+        background: center / cover no-repeat url("./img/salad.jpg");
+    }
+    
+    &.pizzas {
+        background: center / cover no-repeat url("./img/pizza.jpg");
+    }
+    
+    &.pastas {
+        background: center / cover no-repeat url("./img/pasta.jpg");
+    }
+    
+    &.soups {
+        background: center / cover no-repeat url("./img/soup.jpg");
+    }
 }
 
-.pizzas {
-    background: center / cover no-repeat url("./img/pizza.jpg");
-}
+.about {
+    & h1 {
+        padding: 2rem 0 1rem 0;
+    }
 
-.pastas {
-    background: center / cover no-repeat url("./img/pasta.jpg");
-}
-
-.soups {
-    background: center / cover no-repeat url("./img/soup.jpg");
+    & p {
+        font-size: 1.1rem;
+        line-height: 1.5;
+        text-indent: 1rem;
+    }
 }
